# aiopytesseract

./: .coveragerc  .pre-commit-config.yaml  .tool-versions  Dockerfile  Makefile  README.md  docker-compose.yml  mkdocs.yml  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  feature.yml
.github/workflows/: ci.yml
aiopytesseract/: __init__.py  _logger.py  base_command.py  commands.py  constants.py  exceptions.py  file_format.py  parameter.py  returncode.py  validators.py
aiopytesseract/models/: __init__.py  box.py  data.py  osd.py  parameter.py
docs/: best-practices.md  contributing.md  development.md  index.md  more.md  pull_request_template.md
examples/streamlit/: app.py
tests/: test_base_command.py  test_commands.py  test_constants.py  test_exceptions.py  test_file_format.py  test_image_to_boxes.py  test_image_to_data.py  test_image_to_hocr.py  test_image_to_osd.py  test_image_to_pdf.py  test_image_to_string.py  test_validators.py
tests/samples/: user_patterns.txt
