[bdist_wheel]
universal = 1

[metadata]
name = aiopytesseract
version = attr: aiopytesseract.__version__
author = Alexandre Menezes
author_email = alexandre.fmenezes@gmail.com
description = asyncio tesseract wrapper for Tesseract-OCR
long_description = file: README.md
long_description_content_type = text/markdown
license = Apache-2.0
license_files = LICENSE
url = https://github.com/amenezes/aiopytesseract
project_urls =
  Documentation = https://github.com/amenezes/aiopytesseract
  Code = https://github.com/amenezes/aiopytesseract
  Issue tracker = https://github.com/amenezes/aiopytesseract/issues
  Changes = https://github.com/amenezes/aiopytesseract/releases
classifiers =
  Development Status :: 5 - Production/Stable
  Framework :: AsyncIO
  Intended Audience :: Developers
  License :: OSI Approved :: Apache Software License
  Operating System :: OS Independent
  Programming Language :: Python :: 3 :: Only
  Programming Language :: Python :: 3.8
  Programming Language :: Python :: 3.9
  Programming Language :: Python :: 3.10
  Programming Language :: Python :: 3.11
  Programming Language :: Python :: 3.12
  Programming Language :: Python :: 3.13
  Programming Language :: Python :: Implementation :: CPython
  Programming Language :: Python :: Implementation :: PyPy
  Topic :: Software Development :: Libraries
keywords = "asyncio", "ocr", "tesseract"

[options]
packages = find:
install_requires =
  aiofiles >= 0.8.0
  attrs >= 22.1.0
  cattrs >= 22.1.0
python_requires = >= 3.8

[options.extras_require]
docs = mkdocs-material
all = mkdocs-material

[flake8]
exclude = venv
          __pycache__
          *.pyc
          __init__.py

ignore = E501
verbose = 2
doctests = True
show_source = True
statistics = True
count = True

[tool:pytest]
testpaths = tests
asyncio_mode = auto
filterwarnings =
    ignore::pytest.PytestUnraisableExceptionWarning

[mypy]
platform=linux

files = aiopytesseract
show_error_context = True
verbosity = 0
no_implicit_optional = True

warn_unused_configs = True
warn_return_any = True
warn_unused_ignores = True
warn_unreachable = True

check_untyped_defs = True
extra_checks = True
strict_equality = True
no_implicit_reexport = True

disallow_untyped_defs = True
disallow_untyped_calls = True
disallow_incomplete_defs = True
disallow_subclassing_any = True
disallow_untyped_decorators = True
disallow_any_generics = True

[testenv]
deps = -rrequirements-dev.txt
whitelist_externals = make
commands =
    make ci
